# hypersphere

./: Cargo.toml  readme.md
src/: basis.rs  camera.rs  even_permutations.rs  gram_schmidt.rs  hexacosichoron.rs  lib.rs  main.rs  projection.rs  rotation.rs
