[package]
name = "hypersphere"
version = "0.1.1"
authors = ["Patrik Buhring <patrikbuhring@gmail.com>"]
edition = "2021"
description = "Simple 4D primitives for rotation and projection."
repository = "https://github.com/OptimisticPeach/hypersphere"
license = "MIT OR Apache-2.0"
keywords = ["graphics", "4d", "projection", "sphere", "math"]
categories = ["algorithms", "graphics", "mathematics"]

[dependencies]
glam = "0.24.0"
